--- a/index.html
+++ b/index.html
@@ -24,7 +24,9 @@
         <h2 class="text-4xl font-bold">Experience the Future with SmartGadget</h2>
         <p class="text-lg mt-4">The most advanced gadget designed to simplify your life.</p>
         <img src="product-image.jpg" alt="Smart Gadget" class="mx-auto mt-6 w-64 h-auto">
-        <a href="#buy" class="mt-6 bg-yellow-500 text-black px-6 py-3 rounded text-lg font-bold">Buy Now</a>
+        <a href="checkout.html" class="mt-6 bg-yellow-500 text-black px-6 py-3 rounded text-lg font-bold">
+           Buy Now
+        </a>
     </section>
 
     <!-- Features Section -->
