--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
     <section class="text-center py-16 bg-gradient-to-r from-purple-500 to-purple-800 text-white">
         <h2 class="text-4xl font-bold">Experience the Future with SmartGadget</h2>
         <p class="text-lg mt-4">The most advanced gadget designed to simplify your life.</p>
-        <img src="product-image.jpg" alt="Smart Gadget" class="mx-auto mt-6 w-64 h-auto">
+        <img src="IMG_3100.jpeg" alt="Smart Gadget" class="mx-auto mt-6 w-64 h-auto">
         <a href="checkout.html" class="mt-6 bg-yellow-500 text-black px-6 py-3 rounded text-lg font-bold">
            Buy Now
         </a>
