--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
         <div class="grid grid-cols-1 md:grid-cols-3 gap-6 mt-8">
             <div class="p-4 shadow-lg bg-white rounded-lg">
                 <video width="640" height="360" controls>
-                    <source src="1.mp4" type="video/mp4">
+                    <source src="video/1.mp4" type="video/mp4">
                        Your browser does not support the video tag.
                 </video>
                 <h4 class="text-xl font-bold">🔋 Long Battery Life</h4>
