--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
         <h3 class="text-3xl font-bold">Why Choose SmartGadget?</h3>
         <div class="grid grid-cols-1 md:grid-cols-3 gap-6 mt-8">
             <div class="p-4 shadow-lg bg-white rounded-lg">
-                <video controls poster="thumbnail.jpg" class="w-full max-w-lg mx-auto rounded-lg shadow-lg">
+                <video controls poster="video/IMG_3333.jpeg" class="w-full max-w-lg mx-auto rounded-lg shadow-lg">
                     <source src="video/1.mp4" type="video/mp4">
                       Your browser does not support the video tag.
                 </video>
