--- a/index.html
+++ b/index.html
@@ -3,13 +3,13 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Premium Smart Gadget</title>
+    <title>Premium velyora</title>
     <script src="https://cdn.tailwindcss.com"></script>
 </head>
 <body class="bg-gray-100 text-gray-900">
     <!-- Header -->
     <header class="bg-purple-800 text-white p-4 flex justify-between items-center">
-        <h1 class="text-xl font-bold">SmartGadget</h1>
+        <h1 class="text-xl font-bold">VELYORA</h1>
         <nav>
             <ul class="flex space-x-6">
                 <li><a href="#features" class="hover:underline">Features</a></li>
@@ -21,7 +21,7 @@
 
     <!-- Hero Section -->
     <section class="text-center py-16 bg-gradient-to-r from-purple-500 to-purple-800 text-white">
-        <h2 class="text-4xl font-bold">Experience the Future with SmartGadget</h2>
+        <h2 class="text-4xl font-bold">Experience the Future with VELYORA</h2>
         <p class="text-lg mt-4">The most advanced gadget designed to simplify your life.</p>
         <img src="IMG_3100.jpeg" alt="Smart Gadget" class="mx-auto mt-6 w-64 h-auto">
         <a href="checkout.html" class="mt-6 bg-yellow-500 text-black px-6 py-3 rounded text-lg font-bold">
@@ -95,7 +95,7 @@
 
     <!-- Footer -->
     <footer id="contact" class="bg-gray-900 text-white text-center p-6">
-        <p>&copy; 2025 SmartGadget. All Rights Reserved.</p>
+        <p>&copy; 2025 velyora. All Rights Reserved.</p>
         <p>Need help? Contact us at <a href="mailto:support@smartgadget.com" class="underline">support@smartgadget.com</a></p>
     </footer>
 </body>
