--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
 
     <!-- Features Section -->
     <section id="features" class="py-16 container mx-auto text-center">
-        <h3 class="text-3xl font-bold">Why Choose SmartGadget?</h3>
+        <h3 class="text-3xl font-bold">Why Choose velyora?</h3>
         <div class="grid grid-cols-1 md:grid-cols-3 gap-6 mt-8">
             <div class="p-4 shadow-lg bg-white rounded-lg">
                 <video controls poster="video/IMG_3333.jpeg" class="w-full max-w-lg mx-auto rounded-lg shadow-lg">
@@ -88,7 +88,7 @@
 
     <!-- Call to Action -->
     <section id="buy" class="text-center py-16 bg-purple-800 text-white">
-        <h3 class="text-3xl font-bold">Order Your SmartGadget Today!</h3>
+        <h3 class="text-3xl font-bold">Order Your velyora Today!</h3>
         <p class="mt-4">Limited stock available. Get yours now!</p>
         <a href="#checkout" class="mt-6 bg-yellow-500 text-black px-6 py-3 rounded text-lg font-bold">Buy Now</a>
     </section>
