--- a/index.html
+++ b/index.html
@@ -39,7 +39,9 @@
                       Your browser does not support the video tag.
                 </video>
                 <h4 class="text-xl font-bold">🔋 Long Battery Life</h4>
-                <p>Stay connected all day with an extended battery life.</p>
+                <p>‏✔️ A highly effective car glass cleaning tool that removes oil films and dirt with ease.<br>
+‏                   ✔️ Ergonomically designed for a comfortable and hassle-free cleaning experience.<br>
+‏                   ✔️ Restores glass clarity, improving visibility while driving.</p></br>
             </div>
             <div class="p-4 shadow-lg bg-white rounded-lg">
                 <h4 class="text-xl font-bold">📶 Advanced Connectivity</h4>
