--- a/index.html
+++ b/index.html
@@ -44,8 +44,10 @@
 ‏                   ✔️ Restores glass clarity, improving visibility while driving.</p></br>
             </div>
             <div class="p-4 shadow-lg bg-white rounded-lg">
-                <h4 class="text-xl font-bold">📶 Advanced Connectivity</h4>
-                <p>Seamlessly connect with any device in real-time.</p>
+                <h4 class="text-xl font-bold">Clear Vision in Any Weather</h4>
+                <p>‏✔️ Helps remove fog and dirt that obstruct visibility on car windows.<br>
+‏                   ✔️ Easy to use—just wipe the glass to restore its clear view.<br>
+‏                   ✔️ Perfect for rainy and harsh weather conditions to enhance visibility.</p></br>
             </div>
             <div class="p-4 shadow-lg bg-white rounded-lg">
                 <h4 class="text-xl font-bold">🌟 Elegant Design</h4>
