--- a/index.html
+++ b/index.html
@@ -51,7 +51,9 @@
             </div>
             <div class="p-4 shadow-lg bg-white rounded-lg">
                 <h4 class="text-xl font-bold">🌟 Elegant Design</h4>
-                <p>Sleek, lightweight, and stylish for every occasion.</p>
+                <p>‏✔️ An innovative glass cleaner that ensures a spotless and crystal-clear view.<br>
+‏                   ✔️ Made from durable materials that are safe for glass without causing scratches.<br>
+‏                   ✔️ Suitable for all types of car glass, including side mirrors and windows.</p></br>
             </div>
         </div>
     </section>
