--- a/index.html
+++ b/index.html
@@ -82,12 +82,12 @@
         <h3 class="text-3xl font-bold">Frequently Asked Questions</h3>
         <div class="mt-8 text-left max-w-2xl mx-auto">
             <details class="mb-4">
-                <summary class="font-bold cursor-pointer">How long does the battery last?</summary>
-                <p class="mt-2">Up to 48 hours with normal usage.</p>
+                <summary class="font-bold cursor-pointer">Does this car glass cleaner leave any streaks or scratches on the glass?</summary>
+                <p class="mt-2">No, this cleaner is designed with high-quality, scratch-free materials that ensure a smooth and streak-free finish. It effectively removes oil films, dirt, and fog without leaving any marks, making your car windows crystal clear.</p>
             </details>
             <details class="mb-4">
-                <summary class="font-bold cursor-pointer">Is there a warranty?</summary>
-                <p class="mt-2">Yes, we offer a 1-year warranty on all our products.</p>
+                <summary class="font-bold cursor-pointer"> Is this car glass cleaner reusable, or does it need to be replaced after a fe</summary>
+                <p class="mt-2">Yes, this cleaner is reusable and designed for long-term use. Simply rinse it with water after each cleaning session, and it will be ready to use again. Its durable material ensures effective performance over multiple uses.</p>
             </details>
         </div>
     </section>
