--- a/index.html
+++ b/index.html
@@ -50,7 +50,7 @@
 ‏                   ✔️ Perfect for rainy and harsh weather conditions to enhance visibility.</p></br>
             </div>
             <div class="p-4 shadow-lg bg-white rounded-lg">
-                <h4 class="text-xl font-bold">🌟 Elegant Design</h4>
+                <h4 class="text-xl font-bold">Scratch-Free & Streak-Free Cleaning</h4>
                 <p>‏✔️ An innovative glass cleaner that ensures a spotless and crystal-clear view.<br>
 ‏                   ✔️ Made from durable materials that are safe for glass without causing scratches.<br>
 ‏                   ✔️ Suitable for all types of car glass, including side mirrors and windows.</p></br>
