--- a/index.html
+++ b/index.html
@@ -38,8 +38,8 @@
                     <source src="video/1.mp4" type="video/mp4">
                       Your browser does not support the video tag.
                 </video>
-                <h4 class="text-xl font-bold">Ultimate Car Glass Cleaning Tool</h4>
-                <p>‏✔️ A highly effective car glass cleaning tool that removes oil films and dirt with ease.<br>
+                <h4 class="text-xl font-bold">Ultimate Car Glass Cleaning Tool</h4><br>
+            </br><p>‏✔️ A highly effective car glass cleaning tool that removes oil films and dirt with ease.<br>
 ‏                   ✔️ Ergonomically designed for a comfortable and hassle-free cleaning experience.<br>
 ‏                   ✔️ Restores glass clarity, improving visibility while driving.</p></br>
             </div>
