--- a/index.html
+++ b/index.html
@@ -37,20 +37,20 @@
                 <video controls poster="video/IMG_3333.jpeg" class="w-full max-w-lg mx-auto rounded-lg shadow-lg">
                     <source src="video/1.mp4" type="video/mp4">
                       Your browser does not support the video tag.
-                </video>
+                </video><br></br>
                 <h4 class="text-xl font-bold">Ultimate Car Glass Cleaning Tool</h4><br>
             </br><p>‏✔️ A highly effective car glass cleaning tool that removes oil films and dirt with ease.<br>
 ‏                   ✔️ Ergonomically designed for a comfortable and hassle-free cleaning experience.<br>
 ‏                   ✔️ Restores glass clarity, improving visibility while driving.</p></br>
             </div>
             <div class="p-4 shadow-lg bg-white rounded-lg">
-                <h4 class="text-xl font-bold">Clear Vision in Any Weather</h4>
+                <h4 class="text-xl font-bold">Clear Vision in Any Weather</h4><br></br>
                 <p>‏✔️ Helps remove fog and dirt that obstruct visibility on car windows.<br>
 ‏                   ✔️ Easy to use—just wipe the glass to restore its clear view.<br>
 ‏                   ✔️ Perfect for rainy and harsh weather conditions to enhance visibility.</p></br>
             </div>
             <div class="p-4 shadow-lg bg-white rounded-lg">
-                <h4 class="text-xl font-bold">Scratch-Free & Streak-Free Cleaning</h4>
+                <h4 class="text-xl font-bold">Scratch-Free & Streak-Free Cleaning</h4><br></br>
                 <p>‏✔️ An innovative glass cleaner that ensures a spotless and crystal-clear view.<br>
 ‏                   ✔️ Made from durable materials that are safe for glass without causing scratches.<br>
 ‏                   ✔️ Suitable for all types of car glass, including side mirrors and windows.</p></br>
