--- a/index.html
+++ b/index.html
@@ -96,7 +96,7 @@
     <section id="buy" class="text-center py-16 bg-purple-800 text-white">
         <h3 class="text-3xl font-bold">Order Your velyora Today!</h3>
         <p class="mt-4">Limited stock available. Get yours now!</p>
-        <a href="#checkout" class="mt-6 bg-yellow-500 text-black px-6 py-3 rounded text-lg font-bold">Buy Now</a>
+        <a href="checkout.html" class="mt-6 bg-yellow-500 text-black px-6 py-3 rounded text-lg font-bold">Buy Now</a>
     </section>
 
     <!-- Footer -->
