--- a/checkout.html
+++ b/checkout.html
@@ -13,7 +13,7 @@
 
         <!-- ✅ صورة المنتج -->
         <div class="flex justify-center mb-4">
-            <img src="IMG_3378.png" alt="Product" class="w-48 h-auto rounded-lg border">
+            <img src="IMG_3101.jpeg" alt="Product" class="w-48 h-auto rounded-lg border">
         </div>
 
         <!-- ✅ زر التحكم في الكمية -->
@@ -66,7 +66,7 @@
 
     <script>
         document.addEventListener("DOMContentLoaded", function () {
-            let pricePerItem = 14.00;
+            let pricePerItem = 12.00;
             let totalPrice = pricePerItem;
 
             const quantityElement = document.getElementById("quantity");
