--- a/index.html
+++ b/index.html
@@ -44,12 +44,14 @@
 ‏                   ✔️ Restores glass clarity, improving visibility while driving.</p></br>
             </div>
             <div class="p-4 shadow-lg bg-white rounded-lg">
+                <img src="IMG_3100.jpeg" alt="" width="300" height="200">
                 <h4 class="text-xl font-bold">Clear Vision in Any Weather</h4><br></br>
                 <p>‏✔️ Helps remove fog and dirt that obstruct visibility on car windows.<br>
 ‏                   ✔️ Easy to use—just wipe the glass to restore its clear view.<br>
 ‏                   ✔️ Perfect for rainy and harsh weather conditions to enhance visibility.</p></br>
             </div>
             <div class="p-4 shadow-lg bg-white rounded-lg">
+                <img src="IMG_3101.jpeg" alt="" width="300" height="200">
                 <h4 class="text-xl font-bold">Scratch-Free & Streak-Free Cleaning</h4><br></br>
                 <p>‏✔️ An innovative glass cleaner that ensures a spotless and crystal-clear view.<br>
 ‏                   ✔️ Made from durable materials that are safe for glass without causing scratches.<br>
