--- a/index.html
+++ b/index.html
@@ -6,27 +6,25 @@
     <title>Premium velyora</title>
     <script src="https://cdn.tailwindcss.com"></script>
     <style>
-        .telegram-button {
+        .telegram-icon {
             position: fixed;
             bottom: 20px;
             right: 20px;
-            background-color: #0088cc;
-            color: white;
-            padding: 12px 20px;
-            font-size: 16px;
-            font-weight: bold;
+            font-size: 40px;
+            color: #0088cc;
             text-decoration: none;
-            border-radius: 5px;
             transition: 0.3s;
-        }
+       }
 
-        .telegram-button:hover {
-            background-color: #006f9c;
-        }
+       .telegram-icon:hover {
+           color: #006f9c;
+       }
     </style>
 </head>
 <body class="bg-gray-100 text-gray-900">
-     <a href="https://t.me/@tt90010" class="telegram-button" target="_blank">تواصل عبر تيلجرام</a>
+     <a href="https://t.me/@tt90010" class="telegram-icon" target="_blank">
+         <i class="fa-brands fa-telegram"></i>
+     </a>
     <!-- Header -->
     <header class="bg-purple-800 text-white p-4 flex justify-between items-center">
         <h1 class="text-xl font-bold">VELYORA</h1>
