--- a/index.html
+++ b/index.html
@@ -5,26 +5,29 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Premium velyora</title>
     <script src="https://cdn.tailwindcss.com"></script>
-    <style>
-        .telegram-icon {
-            position: fixed;
-            bottom: 20px;
-            right: 20px;
-            font-size: 40px;
-            color: #0088cc;
-            text-decoration: none;
-            transition: 0.3s;
-       }
-
-       .telegram-icon:hover {
-           color: #006f9c;
-       }
-    </style>
 </head>
 <body class="bg-gray-100 text-gray-900">
-     <a href="https://t.me/@tt90010" class="telegram-icon" target="_blank">
+     <a href="https://t.me/YourTelegramUsername" class="telegram-icon" target="_blank">
          <i class="fa-brands fa-telegram"></i>
      </a>
+
+  <style>
+     .telegram-icon {
+         position: fixed;
+         bottom: 20px;
+         right: 20px;
+         font-size: 40px;
+         color: #0088cc;
+         text-decoration: none;
+         transition: 0.3s;
+      }
+
+      .telegram-icon:hover {
+          color: #006f9c;
+      }
+  </style>
+
+<script src="https://kit.fontawesome.com/YOUR_KIT_CODE.js" crossorigin="anonymous"></script>
     <!-- Header -->
     <header class="bg-purple-800 text-white p-4 flex justify-between items-center">
         <h1 class="text-xl font-bold">VELYORA</h1>
