--- a/index.html
+++ b/index.html
@@ -8,24 +8,28 @@
 </head>
 <body class="bg-gray-100 text-gray-900">
      <a href="https://t.me/YourTelegramUsername" class="telegram-icon" target="_blank">
-         <i class="fa-brands fa-telegram"></i>
+         <img src="https://upload.wikimedia.org/wikipedia/commons/8/82/Telegram_logo.svg" alt="Telegram" width="50">
      </a>
 
-  <style>
-      .telegram-icon {
-          position: fixed;
-          bottom: 20px;
-          right: 20px;
-          font-size: 40px;
-          color: #0088cc;
-          text-decoration: none;
-          transition: 0.3s;
-       }
+<style>
+    .telegram-icon {
+        position: fixed;
+        bottom: 20px;
+        right: 20px;
+        width: 50px;
+        height: 50px;
+        transition: 0.3s;
+    }
 
-       .telegram-icon:hover {
-           color: #006f9c;
-       }
-  </style>
+    .telegram-icon img {
+        width: 100%;
+        height: 100%;
+    }
+
+    .telegram-icon:hover {
+        opacity: 0.8;
+    }
+</style>
 
   <script src="https://kit.fontawesome.com/YOUR_KIT_CODE.js" crossorigin="anonymous"></script>
     <!-- Header -->
