--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <script src="https://cdn.tailwindcss.com"></script>
 </head>
 <body class="bg-gray-100 text-gray-900">
-     <a href="https://t.me/YourTelegramUsername" class="telegram-icon" target="_blank">
+     <a href="https://t.me/@tt90010" class="telegram-icon" target="_blank">
          <img src="https://upload.wikimedia.org/wikipedia/commons/8/82/Telegram_logo.svg" alt="Telegram" width="50">
      </a>
 
