--- a/index.html
+++ b/index.html
@@ -129,7 +129,7 @@
     <!-- Footer -->
     <footer id="contact" class="bg-gray-900 text-white text-center p-6">
         <p>&copy; 2025 velyora. All Rights Reserved.</p>
-        <p>Need help? Contact us at <a href="mailto:voclen08@gmail.com" class="underline">support@smartgadget.com</a></p>
+        <p>Need help? Contact us at <a href="mailto:voclen08@gmail.com" class="underline">voclen08@gmail.com</a></p>
     </footer>
 </body>
 </html>
