--- a/index.html
+++ b/index.html
@@ -72,7 +72,7 @@
                 <img src="IMG_3100.jpeg" alt="" width="300" height="200">
                 <h4 class="text-xl font-bold">Clear Vision in Any Weather</h4><br></br>
                 <p>‏✔️ Helps remove fog and dirt that obstruct visibility on car windows.<br>
-‏                   ✔️ Easy to use—just wipe the glass to restore its clear view.<br>
+‏                   ✔️ Easy to use—just wipe the glass to restore its clear view.
 ‏                   ✔️ Perfect for rainy and harsh weather conditions to enhance visibility.</p></br>
 
 
