--- a/payment.html
+++ b/payment.html
@@ -32,7 +32,7 @@
                 <p><strong>Quantity:</strong> <span id="quantity" class="text-gray-800"></span></p>
                 <p class="text-xl font-bold mt-4 text-gray-900">Total: $<span id="total"></span></p>
             </div>
-             <p>Your tracking number and purchase invoice will be sent to your mobile number. Please make sure the information you entered is correct.</p>
+             <p>Your tracking number and purchase invoice will be sent to your mobile number. Please make sure the information you entered is correct.</p><br></br>
 
             <!-- ✅ زر الدفع عبر PayPal -->
             <div id="paypal-button-container" class="mb-4"></div>
