--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@
         <nav>
             <ul class="flex space-x-6">
                 <li><a href="#features" class="hover:underline">Features</a></li>
-                <li><a href="#faq" class="hover:underline">Questions</a></li>
+                <li><a href="#Track.html" class="hover:underline">Track</a></li>
                 <li><a href="#contact" class="hover:underline">Contact</a></li>
             </ul>
         </nav>
