--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@
         <nav>
             <ul class="flex space-x-6">
                 <li><a href="shipping.html" class="hover:underline">shipping</a></li>
-                <li><a href="Track.html" class="btn">Track</a></li>
+                <li><a href="Track.html" class="hover:underline">Track</a></li>
                 <li><a href="#contact" class="hover:underline">Contact</a></li>
             </ul>
         </nav>
