--- a/index.html
+++ b/index.html
@@ -73,7 +73,7 @@
                 <h4 class="text-xl font-bold">Clear Vision in Any Weather</h4><br></br>
                 <p>‏Helps remove fog and dirt that obstruct visibility on car windows.
 ‏                   Easy to use—just wipe the glass to restore its clear view.
-‏                   Perfect for rainy and harsh weather conditions to enhance visibility.</p>
+‏                   Perfect for rainy and harsh weather conditions to enhance visibility.</p><br></br>
 
 
                 <img src="IMG_3101.jpeg" alt="" width="300" height="200">
