--- a/index.html
+++ b/index.html
@@ -74,6 +74,7 @@
                 <p>‏Helps remove fog and dirt that obstruct visibility on car windows.
 ‏                   Easy to use—just wipe the glass to restore its clear view.
 ‏                   Perfect for rainy and harsh weather conditions to enhance visibility.</p><br></br>
+                <img src="IMG_3102.jpeg" alt="" width="300" height="200">
 
 
                 <img src="IMG_3101.jpeg" alt="" width="300" height="200">
@@ -81,6 +82,7 @@
                 <p>‏ An innovative glass cleaner that ensures a spotless and crystal-clear view.
 ‏                   Made from durable materials that are safe for glass without causing scratches.
 ‏                    Suitable for all types of car glass, including side mirrors and windows.</p>
+                <img src="IMG_3103.jpeg" alt="" width="300" height="200">
          
         </div>
     </section>
