--- a/index.html
+++ b/index.html
@@ -69,7 +69,7 @@
 ‏                    Restores glass clarity, improving visibility while driving.</p></br>
             
 
-                <img src="IMG_3100.jpeg" alt="" width="300" height="200">
+                <img src="IMG_3100.jpeg" alt="" width="300" height="200"><br></br>
                 <h4 class="text-xl font-bold">Clear Vision in Any Weather</h4><br></br>
                 <p>‏Helps remove fog and dirt that obstruct visibility on car windows.
 ‏                   Easy to use—just wipe the glass to restore its clear view.
@@ -77,11 +77,11 @@
                 <img src="IMG_3102.jpeg" alt="" width="300" height="200">
 
 
-                <img src="IMG_3101.jpeg" alt="" width="300" height="200">
+                <img src="IMG_3101.jpeg" alt="" width="300" height="200"><br></br>
                 <h4 class="text-xl font-bold">Scratch-Free & Streak-Free Cleaning</h4><br></br>
                 <p>‏ An innovative glass cleaner that ensures a spotless and crystal-clear view.
 ‏                   Made from durable materials that are safe for glass without causing scratches.
-‏                    Suitable for all types of car glass, including side mirrors and windows.</p>
+‏                    Suitable for all types of car glass, including side mirrors and windows.</p><br></br>
                 <img src="IMG_3105.jpeg" alt="" width="300" height="200">
          
         </div>
