--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@
         <h1 class="text-xl font-bold">VELYORA</h1>
         <nav>
             <ul class="flex space-x-6">
-                <li><a href="shipping.html" class="hover:underline">shipping</a></li>
+                <li><a href="shipping.html" class="hover:underline">Shipping</a></li>
                 <li><a href="Track.html" class="hover:underline">Track</a></li>
                 <li><a href="#contact" class="hover:underline">Contact</a></li>
             </ul>
