--- a/checkout.html
+++ b/checkout.html
@@ -55,7 +55,7 @@
             </div>
 
             <!-- ✅ إدخال product ID الخاص بعلي إكسبرس (DSers) -->
-            <input type="hidden" id="productID" value="ALIEXPRESS_PRODUCT_ID">
+            <input type="hidden" id="productID" value="1005008403950447">
         </div>
 
         <!-- ✅ زر الشراء -->
