--- a/Quran.html
+++ b/Quran.html
@@ -1,30 +1,30 @@
 <!DOCTYPE html>
-<html lang="ar">
+<html lang="en">
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>صفحة المنتج</title>
+    <title>Product Page</title>
     <link rel="stylesheet" href="styles.css">
 </head>
 <body>
     <div class="container">
         <div class="product-grid">
             <div class="product-image">
-                <img src="product-image.jpg" alt="منتج تقني حديث">
+                <img src="product-image.jpg" alt="Modern Tech Product">
             </div>
             <div class="product-details">
-                <h1>اسم المنتج التقني الحديث</h1>
-                <p class="price">299.99$ <span class="discount">399.99$</span></p>
-                <p class="description">وصف مختصر عن المنتج ومميزاته الفريدة بتقنية حديثة وجودة عالية.</p>
+                <h1>Modern Tech Product</h1>
+                <p class="price"><span class="current-price">$299.99</span> <span class="discount">$399.99</span></p>
+                <p class="description">A short description of the product, highlighting its unique features and high-quality technology.</p>
                 <div class="rating">
-                    ⭐⭐⭐⭐⭐ <span>(4.8/5 من 320 تقييم)</span>
+                    ⭐⭐⭐⭐⭐ <span>(4.8/5 from 320 reviews)</span>
                 </div>
-                <button class="buy-btn">اشتري الآن</button>
+                <button class="buy-btn">Buy Now</button>
                 <ul class="features">
-                    <li>✔️ تقنية متطورة</li>
-                    <li>✔️ أداء سريع وعالي الجودة</li>
-                    <li>✔️ بطارية تدوم طويلاً</li>
-                    <li>✔️ ضمان سنة كاملة</li>
+                    <li>✔️ Advanced technology</li>
+                    <li>✔️ High performance and quality</li>
+                    <li>✔️ Long-lasting battery</li>
+                    <li>✔️ One-year warranty</li>
                 </ul>
             </div>
         </div>
