--- a/index.html
+++ b/index.html
@@ -54,6 +54,29 @@
            Buy Now
         </a>
     </section>
+        <div class="container">
+            <div class="product-grid">
+                <div class="product-image">
+                    <img src="product-image.jpg" alt="Modern Tech Product">
+                </div>
+                <div class="product-details">
+                    <h1>Modern Tech Product</h1>
+                    <p class="price"><span class="current-price">$299.99</span> <span class="discount">$399.99</span></p>
+                    <p class="description">A short description of the product, highlighting its unique features and high-quality technology.</p>
+                    <div class="rating">
+                        ⭐⭐⭐⭐⭐ <span>(4.8/5 from 320 reviews)</span>
+                    </div>
+                    <button class="buy-btn">Buy Now</button>
+                    <ul class="features">
+                        <li>✔️ Advanced technology</li>
+                        <li>✔️ High performance and quality</li>
+                        <li>✔️ Long-lasting battery</li>
+                        <li>✔️ One-year warranty</li>
+                    </ul>
+                 </div>
+             </div>
+        </div>
+
 
     <!-- Features Section -->
     <section id="features" class="py-16 container mx-auto text-center">
