--- a/Lar.html
+++ b/Lar.html
@@ -3,31 +3,75 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Product Page</title>
+    <title>Premium Velyora - Product Page</title>
+    <script src="https://cdn.tailwindcss.com"></script>
     <link rel="stylesheet" href="styles.css">
 </head>
-<body>
-    <div class="container">
-        <div class="product-grid">
+<body class="bg-gray-100 text-gray-900">
+
+    <!-- Telegram Floating Icon -->
+    <a href="https://t.me/@tt90010" class="telegram-icon" target="_blank">
+        <img src="https://upload.wikimedia.org/wikipedia/commons/8/82/Telegram_logo.svg" alt="Telegram">
+    </a>
+
+    <style>
+        .telegram-icon {
+            position: fixed;
+            bottom: 20px;
+            right: 20px;
+            width: 50px;
+            height: 50px;
+            transition: 0.3s;
+        }
+        .telegram-icon img {
+            width: 100%;
+            height: 100%;
+        }
+        .telegram-icon:hover {
+            opacity: 0.8;
+        }
+    </style>
+
+    <!-- Header -->
+    <header class="bg-purple-800 text-white p-4 flex justify-between items-center">
+        <h1 class="text-xl font-bold">VELYORA</h1>
+        <nav>
+            <ul class="flex space-x-6">
+                <li><a href="shipping.html" class="hover:underline">Shipping</a></li>
+                <li><a href="Track.html" class="hover:underline">Track</a></li>
+                <li><a href="Quran.html" class="hover:underline">Contact</a></li>
+            </ul>
+        </nav>
+    </header>
+
+    <!-- Product Page Content -->
+    <div class="container mx-auto p-6 flex justify-center">
+        <div class="product-grid bg-white p-6 rounded-lg shadow-md grid grid-cols-1 md:grid-cols-2 gap-8">
             <div class="product-image">
-                <img src="product-image.jpg" alt="Modern Tech Product">
+                <img src="product-image.jpg" alt="Modern Tech Product" class="rounded-lg w-full">
             </div>
-            <div class="product-details">
-                <h1>Modern Tech Product</h1>
-                <p class="price"><span class="current-price">$299.99</span> <span class="discount">$399.99</span></p>
-                <p class="description">A short description of the product, highlighting its unique features and high-quality technology.</p>
-                <div class="rating">
-                    ⭐⭐⭐⭐⭐ <span>(4.8/5 from 320 reviews)</span>
+            <div class="product-details flex flex-col justify-center">
+                <h1 class="text-2xl font-bold mb-4">Modern Tech Product</h1>
+                <p class="price text-lg font-semibold">
+                    <span class="current-price text-green-600">$299.99</span> 
+                    <span class="discount text-red-600 line-through">$399.99</span>
+                </p>
+                <p class="description text-black text-base mt-2">A short description of the product, highlighting its unique features and high-quality technology.</p>
+                <div class="rating text-lg mt-3">
+                    ⭐⭐⭐⭐⭐ <span class="text-gray-600">(4.8/5 from 320 reviews)</span>
                 </div>
-                <button class="buy-btn">Buy Now</button>
-                <ul class="features">
-                    <li>✔️ Advanced technology</li>
-                    <li>✔️ High performance and quality</li>
-                    <li>✔️ Long-lasting battery</li>
-                    <li>✔️ One-year warranty</li>
+                <button class="buy-btn bg-black text-white py-3 px-6 mt-4 rounded-lg hover:bg-gray-800 transition duration-300">
+                    Buy Now
+                </button>
+                <ul class="features mt-6 space-y-2">
+                    <li class="flex items-center">✔️ Advanced technology</li>
+                    <li class="flex items-center">✔️ High performance and quality</li>
+                    <li class="flex items-center">✔️ Long-lasting battery</li>
+                    <li class="flex items-center">✔️ One-year warranty</li>
                 </ul>
             </div>
         </div>
     </div>
+
 </body>
 </html>
